--- a/music_catalog/music/static/css/style.css
+++ b/music_catalog/music/static/css/style.css
@@ -127,3 +127,83 @@ header form select {
     margin: 1rem;
     font-size: 100%;
 }
+
+main form label {
+    display: inline-block;
+    min-width: 20vw;
+    font-size: 120%;
+}
+
+main form input, 
+main form textarea, 
+main form select,
+main form button {
+    font-size: 120%;
+}
+
+main form .helptext {
+    display: block;
+    font-size: 90%;
+}
+
+section.messages {
+    padding: 0;
+    margin: 0;
+}
+
+section.messages .message, ul.errorlist {
+    padding: 0.5rem;
+    margin: 0;
+    border-bottom: 1px solid #888888;
+    display: inline-block;
+}
+
+.message-debug {
+    background-color: #aaaaaa;
+}
+
+.message-info {
+    background-color: #99ccff;
+}
+
+.message-success {
+    background-color: #ccff99;
+}
+
+.message-warning {
+    background-color: #ffcc99;
+}
+
+.message-error, ul.errorlist {
+    background-color: #ffaaaa;
+}
+
+button, .button {
+    background-color: #d8d8d8;
+    border: 1px solid #666666;
+    border-bottom: 2px solid #004488;
+    padding: 0.5rem;
+    font-size: 120%;
+    cursor: pointer;
+}
+
+button:hover, .button:hover {
+    background-color: #dfdfdf;
+    border-bottom: 2px solid #0055cc;
+}
+
+.toolbar {
+    margin: 0.5rem;
+}
+
+.toolbar {
+    margin: 0.5rem;
+}
+
+.toolbar form {
+    display: inline;
+}
+
+.toolbar form select {
+    padding: 0.4rem;
+}
