--- a/music_catalog/music/templates/base.html
+++ b/music_catalog/music/templates/base.html
@@ -15,8 +15,21 @@
         <ul class="nav">
             <li><a href="{% url 'index' %}">{% trans "Library"|capfirst %}</a></li>
             <li><a href="{% url 'track_list' %}">{% trans "Tracks"|capfirst %}</a></li>
-        </ul> 
+            <li><a href="{% url 'album_list' %}">{% trans "albums"|capfirst %}</a></li>
+        </ul>         
         <span class="spacer"></span>
+        <ul class="nav nav-user">
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'user_detail_current' %}">{{ user }}</a></li>
+            {% if user.is_superuser or user.is_staff %}
+                <li><a href="{% url 'admin:index' %}">{% trans "admin"|capfirst %}</a></li>
+            {% endif %}
+            <li><form method="post" action="{% url "logout" %}">{% csrf_token %}<button type="submit">{% trans "log out"|capfirst %}</button></form></li>
+        {% else %}
+            <li><a href="{% url 'login' %}">{% trans "log in"|capfirst %}</a></li>
+            <li><a href="{% url 'signup' %}">{% trans "sign up"|capfirst %}</a></li>
+        {% endif %}
+        </ul>
         <form action="{% url 'set_language' %}" method="post">
         {% csrf_token %}
         <input type="hidden" name="next" value="{{ redirect_to }}">
@@ -27,8 +40,13 @@
                 </option>
             {% endfor %}
         </select>
-    </form>       
+        </form>       
     </header>
+    <section class="messages">
+        {% for message in messages %}
+            <p class="message message-{{ message.tags }}">{{ message }}</p>
+        {% endfor %}
+    </section>
     <main>{% block content %}{% endblock content %}</main>
     <footer>
         {% block footer %}{% endblock footer %}
